# Simulador-de-Campo-El-ctrico

./: CMakeLists.txt  Comandos_por_si_da_Error.txt  README.md  Scene.h  main.cpp  vcpkg.json
MotorGrafico/: Camera.cpp  Camera.h  Movimiento.cpp  Movimiento.h  Renderer.cpp  Renderer.h  WindowManager.cpp  WindowManager.h
ui/: Panel.cpp  Panel.h
ui/physics/: Esfera.cpp  Esfera.h  ObjetoCompartido.cpp  ObjetoCompartido.h  Particula.cpp  Particula.h
